--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,11 @@ version = "0.1.0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 SeisModels = "47bbc3d6-959e-5592-a00a-d17660d07a0f"
 
+[compat]
+DataStructures = "0.13, 0.14, 0.15, 0.16, 0.17"
+SeisModels = "0.3"
+julia = "1.0"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
