--- a/Project.toml
+++ b/Project.toml
@@ -1,16 +1,18 @@
 name = "Mineos"
 uuid = "daba6828-70d2-4229-869c-b11708ab6c61"
 authors = ["Andy Nowacki <a.nowacki@leeds.ac.uk>"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Mineos_jll = "77b29d01-de08-56f3-96c6-9f6f21a29421"
 SeisModels = "47bbc3d6-959e-5592-a00a-d17660d07a0f"
 
 [compat]
 DataStructures = "0.13, 0.14, 0.15, 0.16, 0.17"
+Mineos_jll = "1"
 SeisModels = "0.3"
-julia = "1.0"
+julia = "1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
