Try to fix Appveyor script quoting

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,7 +29,7 @@ install:
 
 build_script:
   - echo "%JL_BUILD_SCRIPT%"
-  - C:\julia\bin\julia -e "import Pkg; Pkg.pkg"add https://github.com/anowacki/SeisModels.jl""
+  - C:\julia\bin\julia -e "import Pkg; Pkg.pkg\"add https://github.com/anowacki/SeisModels.jl\""
   - C:\julia\bin\julia -e "%JL_BUILD_SCRIPT%"
 
 test_script:
