--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Mineos"
 uuid = "daba6828-70d2-4229-869c-b11708ab6c61"
 authors = ["Andy Nowacki <a.nowacki@leeds.ac.uk>"]
-version = "0.1.3"
+version = "0.1.4"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
@@ -11,7 +11,7 @@ SeisModels = "47bbc3d6-959e-5592-a00a-d17660d07a0f"
 [compat]
 DataStructures = "0.13, 0.14, 0.15, 0.16, 0.17"
 Mineos_jll = "1"
-SeisModels = "0.3.7"
+SeisModels = "0.3.7, 1"
 julia = "1.3"
 
 [extras]
